FIX: theme dark mode color

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -84,13 +84,13 @@
 }
 
 .dark {
-  --background: oklch(0.145 0 0);
+  --background: oklch(19.125% 0.00002 271.152);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.205 0 0);
   --card-foreground: oklch(0.985 0 0);
   --popover: oklch(0.205 0 0);
   --popover-foreground: oklch(0.985 0 0);
-  --primary: oklch(0.922 0 0);
+  --primary: var(--color-indigo-500);
   --primary-foreground: oklch(0.205 0 0);
   --secondary: oklch(0.269 0 0);
   --secondary-foreground: oklch(0.985 0 0);
